--- a/src/main/res/layout/main.xml
+++ b/src/main/res/layout/main.xml
@@ -1,18 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<de.blau.android.views.SplitPaneLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/mainToolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:layout_weight="0"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize">
-    </androidx.appcompat.widget.Toolbar>
+    xmlns:spl="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/pane_layout"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    spl:orientation="vertical"
+    spl:splitterBackground="?attr/SplitterBGH"
+    spl:splitterPosition="66%"
+    spl:splitterSize="5dip">
+    <LinearLayout
+    	android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/mainToolbar"
+        	android:layout_width="match_parent"
+        	android:layout_height="?attr/actionBarSize"
+        	android:layout_weight="0"
+        	android:background="?attr/colorPrimary"
+        	android:minHeight="?attr/actionBarSize">
+   	 	</androidx.appcompat.widget.Toolbar>
     <RelativeLayout
         android:id="@+id/mainMap"
         android:layout_width="match_parent"
@@ -63,18 +72,23 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true" />
     </RelativeLayout>
-    <FrameLayout
-        android:id="@+id/bottomBar"
+    	<FrameLayout
+        	android:id="@+id/bottomBar"
+        	android:layout_width="match_parent"
+        	android:layout_height="?attr/actionBarSize"
+        	android:layout_weight="0"
+        	android:background="?attr/colorPrimary">
+        	<include
+            	android:id="@+id/bottomToolbar"
+            	layout="@layout/toolbar" />
+        	<ViewStub
+            	android:id="@+id/cab_stub"
+            	android:layout_width="match_parent"
+            	android:layout_height="?attr/actionBarSize" />
+    	</FrameLayout>
+	</LinearLayout>
+    <LinearLayout
+        android:id="@+id/fragment_stub"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:layout_weight="0"
-        android:background="?attr/colorPrimary">
-        <include
-            android:id="@+id/bottomToolbar"
-            layout="@layout/toolbar" />
-        <ViewStub
-            android:id="@+id/cab_stub"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize" />
-    </FrameLayout>
-</LinearLayout>
+        android:layout_height="?attr/actionBarSize" />
+</de.blau.android.views.SplitPaneLayout>
